# futuristic_ollama_chat

./: .env  README.md  chat_app.html  chat_ollama.db  document_input.py  main.py  ollama_.py  pyproject.toml  requirements.txt  search.py
chat_ollama/: chat_app.html  chat_app.ts  chat_ollama.db  main.py  pyproject.toml
