[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chat_ollama"
version = "0.1.0"
description = "A FastAPI chat application using Ollama models with PydanticAI."
authors = [
    {name = "Vitali Avagyan", email = "eheva87@gmail.com"},
]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0,<1.0.0",
    "uvicorn[standard]>=0.20.0,<1.0.0",
    "pydantic-ai~=0.2.11",
    # "logfire[fastapi]~=0.20.0", # Logfire removed
]

[project.urls]
Homepage = "https://github.com/yourusername/testing-pydantic-ai" # Placeholder

[tool.hatch.build.targets.wheel]
packages = ["main.py"] 